3xtrat3rr3str3D-backend/src/main/java/org/jrg/antlrBase/yLenguaje/YLenguajeParser.java
// Generated from org/jrg/antlrBase/yLenguaje/YLenguaje.g4 by ANTLR 4.13.2
package org.jrg.antlrBase.yLenguaje;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class YLenguajeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ESTRUCTURAS_TAG=1, FUNCIONES_TAG=2, TIPO_ENTERO=3, TIPO_CADENA=4, TIPO_FLOTANTE=5, 
		TIPO_CARACTER=6, TIPO_BOOLEANO=7, VERDADERO=8, FALSO=9, ESTRUCTURA=10, 
		DEFINIR=11, RETORNAR=12, SI=13, ENTONCES=14, SINO=15, CONTRARIO=16, ELEGIR=17, 
		CASO=18, SIEMPRE=19, ROMPER=20, CONTINUAR=21, PARA=22, MIENTRAS=23, HACER=24, 
		FLECHA=25, INCREMENTO=26, DECREMENTO=27, IGUAL_QUE=28, DIFERENTE_QUE=29, 
		MAYOR_QUE=30, MENOR_QUE=31, MAYOR_IGUAL=32, MENOR_IGUAL=33, AND=34, OR=35, 
		NEGACION=36, ASIGNACION=37, SUMA=38, RESTA=39, MULT=40, DIV=41, CORCHETE_IZQ=42, 
		CORCHETE_DER=43, LLAVE_IZQ=44, LLAVE_DER=45, PAR_IZQ=46, PAR_DER=47, PUNTO_Y_COMA=48, 
		DOS_PUNTOS=49, COMA=50, PUNTO=51, CADENA=52, CARACTER=53, NUMERO_DECIMAL=54, 
		NUMERO_ENTERO=55, IDENTIFICADOR=56, COMENTARIO_LINEA=57, COMENTARIO_BLOQUE=58, 
		NEWLINE=59, ESPACIOS_BLANCO=60, INDENT=61, DEDENT=62;
	public static final int
		RULE_programa = 0, RULE_seccion_estructuras = 1, RULE_seccion_funciones = 2, 
		RULE_tipo_dato = 3, RULE_definicion_struct = 4, RULE_atributo_struct = 5, 
		RULE_definicion_funcion = 6, RULE_parametros = 7, RULE_parametro = 8, 
		RULE_cuerpo_funcion = 9, RULE_instruccion = 10, RULE_terminador = 11, 
		RULE_retorno = 12, RULE_declaracion_variable = 13, RULE_fila_matriz = 14, 
		RULE_asignacion = 15, RULE_variable_asignable = 16, RULE_condicional = 17, 
		RULE_bloque = 18, RULE_seleccion = 19, RULE_caso_seleccion = 20, RULE_caso_defecto = 21, 
		RULE_ciclo = 22, RULE_init_para = 23, RULE_paso_para = 24, RULE_expresion = 25, 
		RULE_valor_primitivo = 26, RULE_lista_expresiones = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "seccion_estructuras", "seccion_funciones", "tipo_dato", 
			"definicion_struct", "atributo_struct", "definicion_funcion", "parametros", 
			"parametro", "cuerpo_funcion", "instruccion", "terminador", "retorno", 
			"declaracion_variable", "fila_matriz", "asignacion", "variable_asignable", 
			"condicional", "bloque", "seleccion", "caso_seleccion", "caso_defecto", 
			"ciclo", "init_para", "paso_para", "expresion", "valor_primitivo", "lista_expresiones"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'%estructuras'", "'%funciones'", "'entero'", "'cadena'", "'flotante'", 
			"'caracter'", "'booleano'", "'verdadero'", "'falso'", "'estructura'", 
			"'definir'", "'retornar'", "'si'", "'entonces'", "'sino'", "'contrario'", 
			"'elegir'", "'caso'", "'siempre'", "'romper'", "'continuar'", "'para'", 
			"'mientras'", "'hacer'", "'->'", "'++'", "'--'", "'=='", "'!='", "'>'", 
			"'<'", "'>='", "'<='", "'&&'", "'||'", "'!'", "'='", "'+'", "'-'", "'*'", 
			"'/'", "'['", "']'", "'{'", "'}'", "'('", "')'", "';'", "':'", "','", 
			"'.'", null, null, null, null, null, null, null, null, null, "'INDENT'", 
			"'DEDENT'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ESTRUCTURAS_TAG", "FUNCIONES_TAG", "TIPO_ENTERO", "TIPO_CADENA", 
			"TIPO_FLOTANTE", "TIPO_CARACTER", "TIPO_BOOLEANO", "VERDADERO", "FALSO", 
			"ESTRUCTURA", "DEFINIR", "RETORNAR", "SI", "ENTONCES", "SINO", "CONTRARIO", 
			"ELEGIR", "CASO", "SIEMPRE", "ROMPER", "CONTINUAR", "PARA", "MIENTRAS", 
			"HACER", "FLECHA", "INCREMENTO", "DECREMENTO", "IGUAL_QUE", "DIFERENTE_QUE", 
			"MAYOR_QUE", "MENOR_QUE", "MAYOR_IGUAL", "MENOR_IGUAL", "AND", "OR", 
			"NEGACION", "ASIGNACION", "SUMA", "RESTA", "MULT", "DIV", "CORCHETE_IZQ", 
			"CORCHETE_DER", "LLAVE_IZQ", "LLAVE_DER", "PAR_IZQ", "PAR_DER", "PUNTO_Y_COMA", 
			"DOS_PUNTOS", "COMA", "PUNTO", "CADENA", "CARACTER", "NUMERO_DECIMAL", 
			"NUMERO_ENTERO", "IDENTIFICADOR", "COMENTARIO_LINEA", "COMENTARIO_BLOQUE", 
			"NEWLINE", "ESPACIOS_BLANCO", "INDENT", "DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "YLenguaje.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YLenguajeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public Seccion_funcionesContext seccion_funciones() {
			return getRuleContext(Seccion_funcionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(YLenguajeParser.EOF, 0); }
		public Seccion_estructurasContext seccion_estructuras() {
			return getRuleContext(Seccion_estructurasContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeListener ) ((YLenguajeListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeListener ) ((YLenguajeListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YLenguajeVisitor ) return ((YLenguajeVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ESTRUCTURAS_TAG) {
				{
				setState(56);
				seccion_estructuras();
				}
			}

			setState(59);
			seccion_funciones();
			setState(60);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Seccion_estructurasContext extends ParserRuleContext {
		public TerminalNode ESTRUCTURAS_TAG() { return getToken(YLenguajeParser.ESTRUCTURAS_TAG, 0); }
		public List<Definicion_structContext> definicion_struct() {
			return getRuleContexts(Definicion_structContext.class);
		}
		public Definicion_structContext definicion_struct(int i) {
			return getRuleContext(Definicion_structContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(YLenguajeParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(YLenguajeParser.NEWLINE, i);
		}
		public Seccion_estructurasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccion_estructuras; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeListener ) ((YLenguajeListener)listener).enterSeccion_estructuras(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeListener ) ((YLenguajeListener)listener).exitSeccion_estructuras(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YLenguajeVisitor ) return ((YLenguajeVisitor<? extends T>)visitor).visitSeccion_estructuras(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Seccion_estructurasContext seccion_estructuras() throws RecognitionException {
		Seccion_estructurasContext _localctx = new Seccion_estructurasContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_seccion_estructuras);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(ESTRUCTURAS_TAG);
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ESTRUCTURA || _la==NEWLINE) {
				{
				setState(65);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ESTRUCTURA:
					{
					setState(63);
					definicion_struct();
					}
					break;
				case NEWLINE:
					{
					setState(64);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Seccion_funcionesContext extends ParserRuleContext {
		public TerminalNode FUNCIONES_TAG() { return getToken(YLenguajeParser.FUNCIONES_TAG, 0); }
		public List<Definicion_funcionContext> definicion_funcion() {
			return getRuleContexts(Definicion_funcionContext.class);
		}
		public Definicion_funcionContext definicion_funcion(int i) {
			return getRuleContext(Definicion_funcionContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(YLenguajeParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(YLenguajeParser.NEWLINE, i);
		}
		public Seccion_funcionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccion_funciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeListener ) ((YLenguajeListener)listener).enterSeccion_funciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeListener ) ((YLenguajeListener)listener).exitSeccion_funciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YLenguajeVisitor ) return ((YLenguajeVisitor<? extends T>)visitor).visitSeccion_funciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Seccion_funcionesContext seccion_funciones() throws RecognitionException {
		Seccion_funcionesContext _localctx = new Seccion_funcionesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_seccion_funciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(FUNCIONES_TAG);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEFINIR || _la==NEWLINE) {
				{
				setState(73);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DEFINIR:
					{
					setState(71);
					definicion_funcion();
					}
					break;
				case NEWLINE:
					{
					setState(72);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tipo_datoContext extends ParserRuleContext {
		public TerminalNode TIPO_ENTERO() { return getToken(YLenguajeParser.TIPO_ENTERO, 0); }
		public TerminalNode TIPO_CADENA() { return getToken(YLenguajeParser.TIPO_CADENA, 0); }
		public TerminalNode TIPO_FLOTANTE() { return getToken(YLenguajeParser.TIPO_FLOTANTE, 0); }
		public TerminalNode TIPO_CARACTER() { return getToken(YLenguajeParser.TIPO_CARACTER, 0); }
		public TerminalNode TIPO_BOOLEANO() { return getToken(YLenguajeParser.TIPO_BOOLEANO, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(YLenguajeParser.IDENTIFICADOR, 0); }
		public Tipo_datoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_dato; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeListener ) ((YLenguajeListener)listener).enterTipo_dato(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeListener ) ((YLenguajeListener)listener).exitTipo_dato(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YLenguajeVisitor ) return ((YLenguajeVisitor<? extends T>)visitor).visitTipo_dato(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tipo_datoContext tipo_dato() throws RecognitionException {
		Tipo_datoContext _localctx = new Tipo_datoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipo_dato);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 72057594037928184L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Definicion_structContext extends ParserRuleContext {
		public Definicion_structContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion_struct; }
	 
		public Definicion_structContext() { }
		public void copyFrom(Definicion_structContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DefEstructuraContext extends Definicion_structContext {
		public TerminalNode ESTRUCTURA() { return getToken(YLenguajeParser.ESTRUCTURA, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(YLenguajeParser.IDENTIFICADOR, 0); }
		public TerminalNode DOS_PUNTOS() { return getToken(YLenguajeParser.DOS_PUNTOS, 0); }
		public TerminalNode NEWLINE() { return getToken(YLenguajeParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(YLenguajeParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YLenguajeParser.DEDENT, 0); }
		public List<Atributo_structContext> atributo_struct() {
			return getRuleContexts(Atributo_structContext.class);
		}
		public Atributo_structContext atributo_struct(int i) {
			return getRuleContext(Atributo_structContext.class,i);
		}
		public DefEstructuraContext(Definicion_structContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeListener ) ((YLenguajeListener)listener).enterDefEstructura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLenguajeListener ) ((YLenguajeListener)listener).exitDefEstructura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YLenguajeVisitor ) return ((YLenguajeVisitor<? extends T>)visitor).visitDefEstructura(this);
			else return visitor.visitChildren(this);
		}
	}
